--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,10 @@
   display: inline-block;
 }
 
+.add-button.editing {
+  display: none;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
