--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,68 @@
-.App {
+:root {
+  --bg-color:#607D8B;
+  --resume-bg-color: #CFD8DC;
+  --nav-bg-color: #455a64;
+  --button-color: #7C4DFF;
+  --button-active-color: #412c7d;
+}
+
+* {
+  margin: 0;
+  padding: 0;
+}
+
+html {
+  background-color: var(--bg-color);
+}
+
+input[type="text"] {
+  padding: 1px 0;
+}
+
+h3 {
+  margin-bottom: 10px;
+}
+
+.header {
+  background-color: var(--nav-bg-color);
   text-align: center;
+  color: white
+}
+
+.resume {
+  background-color: var(--resume-bg-color);
+  border: 1px solid black;
+  width: 700px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  margin: 20px auto;
+  padding: 10px;
+
+}
+
+.resume .section {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  margin: 10px 0;
+}
+
+.button {
+  padding: 4px 20px;
+  background-color: var(--button-color);
+  color: white;
+  border-radius: 4px;
+  border: 0px;
+  transition: filter 100ms;;
+}
+
+.button:hover {
+  filter: brightness(1.2)
+}
+
+.add-button {
+  margin-left: 150px;
 }
 
 .delete.button {
@@ -18,11 +81,35 @@
   display: block;
 }
 
-.skill-list > ul > li:hover  .delete.button {
+li:hover  .delete.button.editing {
   display: inline-block;
 }
 
-.add-button.editing {
+.footer-buttons {
+  align-self: center;
+  margin: 5px;
+}
+
+.footer-buttons button {
+  width: 80px;
+}
+
+.footer-buttons .edit {
+  border-left: 1px solid black;
+  border-radius: 0 4px 4px 0;
+}
+
+.footer-buttons .submit {
+  border-right: 1px solid black;
+  border-radius: 4px 0 0 4px;
+}
+
+.footer-bottons .active {
+  background-color: var(--button-active-color);
+}
+
+
+.add-button.viewing {
   display: none;
 }
 
