--- a/src/components/Personal/Personal.css
+++ b/src/components/Personal/Personal.css
@@ -1,4 +1,4 @@
-.education.section form, .experience.section form {
+.personal-info.section form {
     display: grid;
     grid-template-columns: 1fr 1.5fr;
     row-gap: 5px;
@@ -22,6 +22,23 @@ label {
 }
 
 textarea {
-    max-width: 450px;
+    max-width: 95%;
 }
 
+.preview-text pre {
+    margin-left: 30px;
+  }
+  
+  .preview-text .bold {
+    font-weight: 700;
+  }
+  
+  .personal-info .preview-text {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .text-align-right {
+      text-align: end;
+  }
